--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
+            <div class="container">
                 <!-- Judul -->
               <a class="navbar-brand" href="#">Imelda Putri</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,6 +49,11 @@
               </div>
             </div>
           </nav>
+
+          <div class="container">
+            <h1>Ini container</h1>
+          </div>
+
     <!-- Javascrip -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     </body>
